Convert UpdateThings into an event ThingsOutOfSync.
Signed-off-by: Yufei Cai <yufei.cai@bosch-si.com>